done with description section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,63 @@
               <div class="overview__rating-count">429 votes</div>
             </div>
           </div>
+
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel
+                odio veritatis itaque eos deleniti molestiae explicabo iure enim
+                cumque rem? Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Repellat suscipit ipsa nisi, dolore esse voluptatem
+                voluptas cum possimus exercitationem fugiat?
+              </p>
+              <p class="paragraph">
+                Sunt, qui animi labore optio quia architecto. Nihil nesciunt
+                officiis voluptates dolor. Sed, dolorum quidem enim fuga
+                exercitationem quam asperiores soluta. Blanditiis quisquam
+                nesciunt quos nihil nulla temporibus dolores praesentium
+                exercitationem odit, dolorem beatae
+              </p>
+              <ul class="list">
+                <li class="list__item">Close to the beach</li>
+                <li class="list__item">Breakfast included</li>
+                <li class="list__item">Free airport shuttle</li>
+                <li class="list__item">Free wifi in all rooms</li>
+                <li class="list__item">Air conditioning and heating</li>
+                <li class="list__item">Pets allowed</li>
+                <li class="list__item">We speak all languages</li>
+                <li class="list__item">Perfect for families</li>
+              </ul>
+              <div class="recommend">
+                <p class="recommend__count">
+                  Lucy and 3 others friends recommend this hotel.
+                </p>
+                <div class="recommend__friends">
+                  <img
+                    src="img/user-2.jpg"
+                    alt="friend"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-1.jpg"
+                    alt="friend"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-3.jpg"
+                    alt="friend"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="friend"
+                    class="recommend__photo"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="user-reviews">User Reviews</div>
+          </div>
         </main>
       </div>
     </div>
