done with review section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,43 @@
                 </div>
               </div>
             </div>
-            <div class="user-reviews">User Reviews</div>
+            <div class="user-reviews">
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Quidem sunt suscipit voluptates sapiente deleniti! Vero!
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-6.jpg"
+                    class="review__photo"
+                    alt="review"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Sara Adam</p>
+                    <p class="review__user-date">Mar 23rd, 2020</p>
+                  </div>
+                  <div class="review__rating">7.8</div>
+                </figcaption>
+              </figure>
+              <figure class="review">
+                <blockquote class="review__text">
+                  eveniet ea temporibus facere? Iusto ad aperiam at fuga labore,
+                  reiciendis rerum iure maxime illum culpa nihil quae excepturi
+                  mollitia!
+                </blockquote>
+                <figcaption class="review__user">
+                  <img src="img/user.jpg" class="review__photo" alt="review" />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Jonas Smith</p>
+                    <p class="review__user-date">Mar 12th, 2020</p>
+                  </div>
+                  <div class="review__rating">9.3</div>
+                </figcaption>
+              </figure>
+
+              <button class="btn-inline">Show all <span>&rarr;</span></button>
+            </div>
           </div>
         </main>
       </div>
